Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Jun-2013 Jean-Marie Simonet
 $ [#27307] English only: weblink or web link. Web Link or Web link. Thanks George Wilson

28-Jun-2013 Jean-Marie Simonet
 # Correcting #31772
 ^ [#31267] *Switching to Bootstrap tooltips. Thanks Peter van Westen and Michael Babker.
 #^ [#31143] Registration with invalid password when non-core template. Thansk Elin Waring
 # [#31172] X at hathor messages. Thanks Tobias Zulauf
 ^ [#31087] Add SQL queries profiler in Debug zone with backtrace of call and EXPLAIN hovers. Thanks Beat
 ^ [#31060] Show item title on the Edit page
 ^ [#31100] UX "showon": Dynamic options in the Joomla Backend. Thanks Jérôme GLATIGNY

27-Jun-2013 Elin Waring
 $ [#31272] Fix tags help screen views. Thanks George Wilson
 ^ [#1313] Simplify magic getters in third party API classes. Thanks Michael Babker

27-Jun-2013 Michael Babker
 ^ [#30783] Use JDatabase instead of MySQL queries on com_menus.  Thanks Matias Aguirre
 # [#31157] Field mapping for core_urls is wrong for weblinks.  Thanks Elin Waring
 ^ [#30977] loadmodule/loadposition styles.  Thanks Lasindu Charith
 # [#30895] Fix An undefined variable called in JApplication.  Thanks Roberto Seguara
 ^ [#30871] Remove an unneeded empty().  Thanks Elin Waring
 # [#30946] Platform bug fixes.  Thanks Elin Waring
 # [#31208] No border bottom right radius and border bottom top radius for buttons at com_finder view.  Thanks David Hurley
 # [#31150] Weblinks images.  Thanks Elin Waring
 !^ [#31080] Deprecating X-Content-Encoded-By.  Thanks Piotr Konieczny
 ^ [#31216] Improved some syntax.  Thanks Peter van Westen
 ^ [#31069] Sync Log package to Platform.
 
27-Jun-2013 Jean-Marie Simonet