@@ -27,6 +27,7 @@ $ -> Language fix or change
 
 29-Jun-2013 Jean-Marie Simonet
  $ [#27307] English only: weblink or web link. Web Link or Web link. Thanks George Wilson
+ # [#31285] Joomla Installation is broken with the current git!
 
 28-Jun-2013 Jean-Marie Simonet
  # Correcting #31772
